    - Fix dpkg-divert unit test to work on BSD «rm -rf» that cannot traverse
      directories with mode 000.
    - Fix dpkg-divert unit test to work when there is no /dev/full.
    - Skip test cases when there is no c++filt available.
    - Add test cases for Dpkg::Conf and Dpkg::Checksums.
    - Handle libtool executables in progname unit test.
  * Build system:
    - Bump gettext version to 0.19:
      + Use --add-location=file in msgmerge and xgettext commands.
      + Use --porefs=noline for po4a command.
    - Wrap file references in man page PO files with po4a --porefs=wrap.
    - Fix support for cross-building dpkg:
      + Assume a working C99 snprintf on SUS >= v3.
      + Do not try to run the va_copy configure check, just check that the
        symbol is available.
    - Check that HAVE_DECL_SYS_SIGLIST is 0 instead of undefined, to fix a
      build failure on uclibc based systems. Closes: #777044
      Based on a patch by Alex Potapenko <opotapenko@gmail.com>.
    - Use single suffix rules instead of non-portable %-pattern rules.
    - Pass CC to the test suite, so that we can use a non-gcc compiler.
    - Call AM_PROG_AR to detect the correct system archiver to use.
    - Pass -Wall to automake in AM_INIT_AUTOMAKE, not implied by foreign.
  * Packaging:
    - Remove old trigger related Breaks and Conflicts from dpkg.
    - Only use stackprotectorstrong when building dpkg with gcc >= 4.9.
    - Switch to debhelper compatibility level 9.
    - Name each public-domain license with a different name.
    - Add missing public modules to dpkg-dev package description.
    - Get rid of backward compatibility pseudo-tags from bug reports.
    - Install doc/README.feature-removal-schedule only on affected packages
      and debian/usertags everywhere.
  * Documentation:
    - Document arch-qualifiers for dependency fields in deb-control(5) and
      deb-src-control(5). Reported by Johannes Schauer <j.schauer@email.de>.
      Closes: #768842