@@ -115,6 +115,7 @@ dpkg (1.18.0) UNRELEASED; urgency=low
     - Skip test cases when there is no c++filt available.
     - Add test cases for Dpkg::Conf and Dpkg::Checksums.
     - Handle libtool executables in progname unit test.
+    - Do not use a timeout when testing cat I/O, speeds up test suite by 5s.
   * Build system:
     - Bump gettext version to 0.19:
       + Use --add-location=file in msgmerge and xgettext commands.
